ksystemclipboard: Check m_thread in destructor

The thread might be null

BUG: 514512